<resources>
    <string name="app_name">He-Skin</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_info">Info</string>
    <string name="scan_dan_diagnosa">Scan dan Diagnosa</string>
    <string name="artikel_terkini">Artikel Terkait</string>
    <string name="title_bar_diagnosa">Diagnosa</string>
    <string name="label_input_nama">Nama Anda</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="label_umur">Umur Anda</string>
    <string name="kembali">Kembali</string>
    <string name="lanjut">Berikutnya</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="name_minimal">Minimal 3 karakter!</string>
    <string name="age_max">Maksimal 2 karakter!</string>
    <string name="text_title">Kanker Kulit</string>
    <string name="date_news">07-20-2021</string>
    <string name="name">Nama</string>
    <string name="equal_to">:</string>
    <string name="value_name">Nauval Purnomo Sidi</string>
    <string name="label_jk">Jenis Kelamin</string>
    <string name="label_age">Umur</string>
    <string name="value_age">20</string>
    <string name="label_result_diagnose">Hasil Diagnosa</string>
    <string name="result_diagnose">Karsinoma Sel Skuamosa</string>
    <string name="label_symptoms">Gejala</string>
    <string name="value_symptoms">Bercak membesar dan warna semakin gelap</string>
    <string name="value_treatment">Eksisi</string>
    <string name="value_label_treatment">Pengobatan / Terapi</string>
    <string name="btn_save_diagnose">Tombol Simpan Diagnosa</string>
    <string name="finish">Selesai</string>
    <string name="result_diagnosa">Result Diagnosa</string>
    <string name="name_hospital">RS Karya Medika II Bekasi</string>
    <string name="location_hospital">Jl. Sultan Hasanudin No. 63, Tambun, Kec. Tambun Selatan, Bekasi, Jawa Barat</string>
    <string name="rekomendasi_dokter">Rekomendasi Dokter</string>
    <string name="label_rekomendasi_rumah_sakit">Rekomendasi Rumah Sakit Terdekat</string>
    <string name="spesialist">Spesialis Penyakit Kulit dan Kelamin</string>
    <string name="label_result">Akurasi Result</string>
    <string name="_99">99</string>
    <string name="detail_doktor">Detail Dokter</string>
    <string name="text_empty">Data History Diagnose is Empty !</string>
</resources>