<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@color/whisper"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    tools:context=".ui.detail.DetailDoctorActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@color/colorSecondary"
        android:layout_marginTop="18dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/name_doctor_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/value_name"
        app:layout_constraintTop_toBottomOf="@id/img_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/label_rumah_sakit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/label_rekomendasi_rumah_sakit"
        android:textStyle="italic|bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/name_doctor_detail"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_rumah_sakit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_rumah_sakit"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_hospital"/>


</androidx.constraintlayout.widget.ConstraintLayout>